# webserv

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile
.claude/commands/: fix-github-issue.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ctest.yml  format.yml  lint.yml
.serena/: project.yml
.serena/cache/cpp/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: cgi_implementation_status.md  code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
conf/: webserv.toml
docs/: configuration_schema.json  event_handler.mmd
example/cgi/: counter.py  echo-body.cgi  echo.cgi  error.cgi  hello.cgi  timeout.cgi
example/conf/: webserv.toml
example/html/: index.html
example/html/error/: 404.html
example/html/form/: index.html  index.js  style.css
example/html/other/: about.html  home.html
scripts/: add_test.sh
scripts/template/: test_template.cpp
src/: CMakeLists.txt
src/cmd/: main.cpp
src/lib/: add.cpp  add.h  auto_close_fd.cpp  connection.cpp  connection.hpp  listener.cpp  listener.hpp  server.cpp  server.hpp
src/lib/cgi/: factory.cpp  factory.hpp  meta_variable.cpp  meta_variable.hpp  request.cpp  request.hpp  response.cpp  response.hpp
src/lib/config/: config.cpp  config.hpp  resolver.cpp  resolver.hpp
src/lib/config/toml/: parser.cpp  parser.hpp  tokenizer.cpp  tokenizer.hpp  value.cpp  value.hpp
src/lib/core/: action.cpp  action.hpp  child_reaper.cpp  child_reaper.hpp  repository.cpp  repository.hpp  self_pipe_sigchld.cpp  self_pipe_sigchld.hpp  server.cpp  server.hpp  server_state.cpp  server_state.hpp  virtual_server.cpp  virtual_server.hpp  virtual_server_resolver.cpp  virtual_server_resolver.hpp
src/lib/core/action/: action.cpp  action.hpp  runCgiAction.cpp  run_cgi_action.cpp  serveHttpAction.cpp  serve_http_action.cpp
src/lib/core/handler/: accept_handler.cpp  accept_handler.hpp  echo_handler.cpp  echo_handler.hpp  read_cgi_response_handler.cpp  read_cgi_response_handler.hpp  read_request_handler.cpp  read_request_handler.hpp  request_reader.cpp  request_reader.hpp  write_cgi_request_handler.cpp  write_cgi_request_handler.hpp  write_response_body_handler.cpp  write_response_body_handler.hpp  write_response_handler.cpp  write_response_handler.hpp
src/lib/event/: event.cpp  event.hpp  event_handler.cpp  event_handler.hpp  event_notifier.cpp  event_notifier.hpp
src/lib/event/handler/: accept_handler.cpp  accept_handler.hpp  echo_handler.cpp  echo_handler.hpp  event_handler.cpp  event_handler.hpp
src/lib/http/: header.hpp  method.cpp  method.hpp  mime.cpp  mime.hpp  request.cpp  request.hpp  request_parser.cpp  request_parser.hpp  request_reader.cpp  request_reader.hpp  status.cpp  status.hpp
src/lib/http/handler/: cgi_handler.cpp  cgi_handler.hpp  delete_file_handler.cpp  delete_file_handler.hpp  handler.cpp  handler.hpp  matcher.hpp  redirect_handler.cpp  redirect_handler.hpp  request_handler.cpp  request_handler.hpp  router.cpp  router.hpp  run_cgi_handler.hpp  static_file_handler.cpp  static_file_handler.hpp  upload_file_handler.cpp  upload_file_handler.hpp
src/lib/http/handler/middleware/: error_page.cpp  error_page.hpp  logger.cpp  logger.hpp  middleware.hpp
src/lib/http/request/: request.cpp  request.hpp  request_parser.cpp  request_parser.hpp  request_reader.cpp  request_reader.hpp
src/lib/http/request/reader/: reading_body_state.cpp  reading_body_state.hpp  reading_chunked_body_state.cpp  reading_chunked_body_state.hpp  reading_headers_state.cpp  reading_headers_state.hpp  reading_request_line_state.cpp  reading_request_line_state.hpp  request_reader.cpp  request_reader.hpp  utils.cpp  utils.hpp
src/lib/http/response/: response.cpp  response.hpp  response_builder.cpp  response_builder.hpp
src/lib/http/response/handler/: handler.cpp  handler.hpp
src/lib/transport/: address.cpp  address.hpp  connection.cpp  connection.hpp  endpoint.cpp  endpoint.hpp  listener.cpp  listener.hpp
src/lib/utils/: auto_close_fd.cpp  auto_close_fd.hpp  auto_deleter.hpp  auto_fd.cpp  auto_fd.hpp  fd.cpp  fd.hpp  log.cpp  log.hpp  logger.cpp  logger.hpp  non_copyable.hpp  option.hpp  ref.hpp  result.hpp  string.cpp  string.hpp  time.cpp  time.hpp  unit.hpp
src/lib/utils/io/: byte_buffer.cpp  byte_buffer.hpp  read_buffer.cpp  read_buffer.hpp  reader.cpp  reader.hpp
src/lib/utils/types/: either.hpp  error.cpp  error.hpp  option.hpp  result.cpp  result.hpp  try.hpp  unit.hpp
tests/: CMakeLists.txt  add_test.cpp  auto_deleter_test.cpp  byte_buffer_test.cpp  config_resolver_test.cpp  either_test.cpp  http_method_test.cpp  http_status_test.cpp  matcher_test.cpp  mime_test.cpp  option_test.cpp  read_buffer_test.cpp  reader_test.cpp  ref_test.cpp  request_parser_test.cpp  request_reader_test.cpp  response_test.cpp  result_test.cpp  string_utils_test.cpp  toml_parser_test.cpp  toml_tokenizer_test.cpp  virtual_server_resolver_test.cpp
tests/utils/: reader.cpp  reader.hpp
